--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.gitignore
 Preparation workshop statistical learning and prediction_1920.docx
 Enrollment Graduate winter 2020 courses.xlsx
 Day 2/Session 5/nesda.sav
