--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 Preparation workshop statistical learning and prediction_1920.docx
 Enrollment Graduate winter 2020 courses.xlsx
-Day 2/Session 5/nesda.sav
 Day 2/Session 5/Exercises.Rmd
 Day 1/Session 1/Session 1 - winter course
+Day 2/Session 5/Session 5
+Leiden University workshop M&M 2019.doc
